# graph-sitter

./: .env.example  .gitignore  .pre-commit-config.yaml  =0.23.4  =0.3.0  ANALYSIS_SUMMARY.md  ANALYZER_README.md  ARCHITECTURAL_ANALYSIS_REPORT.md  AUTONOMOUS_CICD.md  AUTONOMOUS_CICD_ANALYSIS.md  AUTONOMOUS_CICD_CONSOLIDATED.md  AUTONOMOUS_CICD_IMPLEMENTATION.md  AUTONOMOUS_CICD_UPGRADES.md  BUILD_OPTIMIZATION.md  CICD_FLOW.md  CICD_FLOW_DOCUMENTATION.md  CODEMOD_ANALYSIS_REPORT.md  CODEMOD_MIGRATION_GUIDE.md  COMPLETE_DEAD_CODE_ANALYSIS.md  COMPONENT_ANALYSIS_GRAPH_SITTER_CODEBASE.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_ANALYSIS_SUMMARY.md  COMPREHENSIVE_DASHBOARD_UPGRADE.md  COMPREHENSIVE_ERROR_ANALYSIS.md  CONTEXTEN_AGENTS_ANALYSIS_REPORT.md  CONTEXTEN_COMPREHENSIVE_ANALYSIS_SUMMARY.md  CONTEXTEN_DEAD_CODE_ANALYSIS.md  CONTEXTEN_ORCHESTRATOR_RESEARCH_REPORT.md  CONTEXTEN_UPGRADE_README.md  CORE_7_IMPLEMENTATION_SUMMARY.md  DASHBOARD_DEPLOYMENT_GUIDE.md  DASHBOARD_README.md  DATABASE_SCHEMA_RESEARCH_REPORT.md  DEAD_CODE_ANALYSIS.md  DEAD_CODE_ANALYSIS_REPORT.md  DEPENDENCY_ANALYSIS_REPORT.md  Dockerfile  Dockerfile.backend  ENHANCED_DASHBOARD_README.md  ENHANCED_ISSUE_LOGGING.md  (+348 more)
.circleci/: config.yml
PRPs/: comprehensive_graph_sitter_analysis.md
analysis/: component_analysis_git_operations.md  component_dependency_map.md  git_operations_implementation_plan.md  immediate_fixes_summary.md
analysis_framework/: README.md
analysis_output/: enhanced_analysis.json  function_contexts.json
analysis_reports/: code_quality_analysis.md  new_react_ui_architecture.md  strands_integration_assessment.md
analysis_results/: deep_comprehensive_analysis_report.json  enhanced_analysis.json  function_contexts.json
analyze/: README.md  analyze_dead_code.py  codebase_analysis_results.json  codemod_deduplication_tool.py  comprehensive_integration_demo.py  comprehensive_serena_demo.py  comprehensive_unified_analyzer.py  deep_comprehensive_analysis.py  enhanced_serena_codebase_analyzer.py  fix_all_remaining_imports.py  fix_imports_codemod.py  full_analysis.py  improved_analysis_results.json  integrated_self_analysis.py  lsp_diagnostics_example.py  real_codebase_analyzer.py  run_full_analysis.py  run_simple_analysis.py  serena_analyzer.py  serena_comprehensive_demo.py  test_comprehensive_unified.py  test_error_detection.py  test_serena_error_analysis.py  test_serena_upgrade.py  test_with_errors.py  ultimate_comprehensive_analyzer.py  unified_serena_analysis_report.json  unified_serena_analyzer.py  unified_serena_analyzer_backup.py  unified_serena_analyzer_fixed.py
api_test_output/: analysis_summary.json  classes.json
backend/: Dockerfile  api.py  config.py  database.py  main.py  requirements.txt
benchmarks/: error_retrieval_performance.py
codebase_dashboard/: __init__.py  codebase_dashboard.py  requirements.txt  rxconfig.py
config/: self_healing_config.yaml
contexten/: README.md  __init__.py  cicd.py  cli.py  config.py  events.py  examples.py  memory.py  orchestrator.py  test_integration.py
contexten_package/: README.md  install.sh  pyproject.toml
dashboard/: FINAL_DEMO.py  PRODUCTION_README.md  README.md  app.py  backend_core.py  dashboard.py  demo.py  demo_backend.py  frontend.py  requirements.txt  run_production_dashboard.py  rxconfig.py  simple_app.py  start_dashboard.py  test_consolidated.py  test_dashboard.py  test_integration.py
database/: 00_comprehensive_schema.sql  README.md  README_COMPREHENSIVE_SCHEMA.md  comprehensive_schema.sql  comprehensive_schema_v2.sql  deploy.sql  init_databases.sql  setup_all_databases.sh
design/: extension_management.md  migration_strategy.md
docs/: CICD_SYSTEM.md  CONSOLIDATED_SYSTEM_GUIDE.md  LSP_API_DOCUMENTATION.md  SEGFAULT_FIX.md  SUPER_COMPREHENSIVE_ANALYSIS.md  TESTING.md  ai-providers.md  api_reference.md  backend_documentation.md  comprehensive_analysis_system.md  comprehensive_implementation_strategy.md  continuous_learning_integration_guide.md  dashboard_analysis_system.md  database_schema_research.md  dependency_analysis.json  enhanced-ai-providers.md  enhanced-codebase-ai.md  enhanced_ai_capabilities.md  enhanced_codebase_ai.md  enhanced_github_integration_spec.md  enhanced_linear_integration_strategy.md  enhanced_runtime_error_detection.md  event_system_guide.md  examples.md  extension_architecture_flowchart.md  getting_started.md  graph-sitter-introduction-analysis.md  graph_sitter_com_function_catalog.md  implementation-roadmap.md  implementation_recommendations.md  integration-architecture.md  integration_roadmap.md  llm-codegen-integration.md  lsp_error_catalog.md  migration-strategy.md  migration_checklist.md  multi-project-analysis-proposal.md  open_evolve_integration.md  openevolve_integration.md  openevolve_integration_architecture.md  (+10 more)
enhanced_codebase_analytics/: README.md  config.json  requirements.txt  run_demo.py  setup.py  test_enhanced_analytics.py
example_codebase/: sample.py
examples/: README.md  README_Analysis.md  STRUCTURE.md  advanced_serena_integration_demo.py  ai_provider_example.py  analysis_api_example.py  analysis_comprehensive_example.py  analysis_example.py  auto_analysis_demo.py  autogenlib_integration_demo.py  autogenlib_usage.py  autonomous_cicd_example.py  cicd_system_example.py  codegen_sdk_integration_demo.py  comprehensive_analysis_example.py  comprehensive_analysis_with_reports.py  comprehensive_cicd_example.py  comprehensive_codebase_analysis.py  comprehensive_contexten_integration.py  comprehensive_error_analysis_demo.py  comprehensive_linear_integration.py  comprehensive_serena_demo.py  comprehensive_system_demo.py  contexten_integration_example.py  continuous_learning_demo.py  continuous_learning_example.py  core_functionality_demo.py  dashboard_analysis_example.py  demo_results.json  enhanced_codebase_ai_demo.py  enhanced_contexten_workflow.py  enhanced_error_context_showcase.py  enhanced_runtime_error_demo.py  event_system_example.py  graph_sitter_analysis.py  graph_sitter_api_demo.py  lsp_usage_examples.py  (+26 more)
graph_sitter_package/: README.md  install.sh  pyproject.toml
(+3226 files in other folders)
